@startuml MiniRedis_Detailed_Class_Diagram
!theme vibrant
skinparam classAttributeIconSize 0
skinparam packageBackgroundColor #FFFFFF

title MiniRedis Complete Class & Architectural Diagram

namespace miniredis {

    enum ValueType {
        String
        Hash
        List
        Set
    }

    enum RespType {
        SimpleString
        Error
        Integer
        BulkString
        Array
        Null
    }

    struct RespValue {
        + type : RespType
        + value : std::variant<string, int64_t, vector<RespValue>>
        + serialize() : string
        + {static} makeSimpleString(str : string) : RespValue
        + {static} makeError(err : string) : RespValue
        + {static} makeInteger(val : int64_t) : RespValue
        + {static} makeBulkString(str : string) : RespValue
        + {static} makeNull() : RespValue
        + {static} makeArray(arr : vector<RespValue>) : RespValue
    }

    class RespParser {
        + {static} parse(input_buffer : string&) : std::optional<RespValue>
    }

    struct Value {
        + type : ValueType
        + data : std::variant<string, unordered_map, deque, unordered_set>
        + expire_at : std::optional<steady_clock::time_point>
        + isExpired() : bool
        + getTtlSeconds() : int64_t
    }

    class Database {
        - store_ : std::unordered_map<string, Value>
        + set(key : string, val : string, ttl_ms : optional<int64_t>) : void
        + get(key : string) : std::optional<string>
        + incr(key : string, increment : int64_t) : std::optional<int64_t>
        + del(key : string) : bool
        + exists(key : string) : bool
        + expire(key : string, ttl_ms : int64_t) : bool
        + ttl(key : string) : int64_t
        + keys(pattern : string) : vector<string>
        + flush() : void
        + purgeExpiredKeys(sample_limit : size_t) : size_t
        + hset(key : string, field : string, value : string) : bool
        + hget(key : string, field : string) : std::optional<string>
        + hdel(key : string, field : string) : bool
        + hgetall(key : string) : std::optional<unordered_map<string, string>>
        + lpush(key : string, values : vector<string>) : size_t
        + rpush(key : string, values : vector<string>) : size_t
        + lpop(key : string) : std::optional<string>
        + rpop(key : string) : std::optional<string>
        + lrange(key : string, start : int, stop : int) : std::optional<vector<string>>
        + sadd(key : string, members : vector<string>) : size_t
        + srem(key : string, members : vector<string>) : size_t
        + smembers(key : string) : std::optional<unordered_set<string>>
    }

    class AofEngine {
        - filepath_ : string
        - file_ : std::ofstream
        + AofEngine(filepath : string)
        + ~AofEngine()
        + append(command : RespValue) : void
        + loadAndReplay(router : Router&) : void
    }

    class Router {
        - db_ : Database&
        - aof_ : AofEngine*
        + Router(db : Database&, aof : AofEngine*)
        + dispatch(request : RespValue, log_to_aof : bool) : RespValue
        - isWriteCommand(cmd : string) : bool
    }

    class Socket {
        - fd_ : int
        + Socket(fd : int)
        + ~Socket()
        + listenOn(port : int, backlog : int) : bool
        + acceptConnection(client_ip : string&, client_port : int&) : int
        + setNonBlocking(non_blocking : bool) : void
        + closeSocket() : void
        + getFd() : int
        + isValid() : bool
    }

    class Connection {
        - fd_ : int
        - router_ : Router&
        - read_buffer_ : string
        - write_buffer_ : string
        + Connection(fd : int, router : Router&)
        + getFd() : int
        + onRead() : bool
        + onWrite() : bool
        + hasPendingWrites() : bool
    }

    class EventLoop {
        - port_ : int
        - epoll_fd_ : int
        - running_ : bool
        - server_socket_ : Socket
        - router_ : Router&
        - db_ : Database&
        - connections_ : std::unordered_map<int, unique_ptr<Connection>>
        + EventLoop(port : int, router : Router&, db : Database&)
        + ~EventLoop()
        + run() : void
        + stop() : void
        - addFd(fd : int) : void
        - updateFdFlags(fd : int, enable_write : bool) : void
        - removeFd(fd : int) : void
    }
}

' Relationships & Dependencies
miniredis.Database "1" *-- "many" miniredis.Value : contains
miniredis.Value "1" *-- "1" miniredis.ValueType : categorized by
miniredis.RespValue "1" *-- "1" miniredis.RespType : categorized by
miniredis.Router "1" o-- "1" miniredis.Database : references
miniredis.Router "1" o-- "0..1" miniredis.AofEngine : logs writes to
miniredis.Connection "1" o-- "1" miniredis.Router : dispatches requests to
miniredis.EventLoop "1" *-- "1" miniredis.Socket : manages listening handle
miniredis.EventLoop "1" *-- "many" miniredis.Connection : tracks active clients
miniredis.EventLoop "1" o-- "1" miniredis.Database : purges expired keys in
miniredis.Connection ..> miniredis.RespParser : parses incoming frames with

@enduml
